# omedia

./: .gitignore  ChangeLog.md  README.md  hie.yaml  macos-tdd-develop.sh  macos-watch-and-cabal.sh  macos-watch-build.sh  omedia.cabal  ophoto.cabal  package.yaml
app/: Main.hs
cbits/: .gitignore  CMakeLists.txt  README.md  image.c  image_vips.c  image_wand.c  main.c  oexif.c  oexif.h  oimage.c  oimage.h
diagrams/: README.md  software-architecture.mmd
src/: Autoimport.hs  CreateMediaThumbnails.hs  Delete.hs  DeleteMedia.hs  Exif.hs  File.hs  Folders.hs  HLib.hs  Image.hs  Import.hs  ImportMedia.hs  Media.hs  MediaMetadata.hs  MediaThumbnails.hs  Normalize.hs  NormalizeMedia.hs  Photo.hs  Read.hs  ReadMedia.hs  ReadTag.hs  ReadToImport.hs  Repository.hs  Service.hs  Tag.hs  Thumbnail.hs  Time.hs  Update.hs  UpdateMedia.hs  Upload.hs  UploadMedia.hs
src/Binding/: Metadata.hsc
test/: CreateMediaFromFile.hs  CreateThumbnailsTests.hs  ReadExif.hs  ReadMediaTests.hs  ReadTests.hs  RepositoryTests.hs  Spec.hs  TagIntegrationTests.hs  TagTests.hs  some-photos.ejdb  some-photos.sql  some-photos.sqlite3  tags.ejdb
